--- a/src/app/admin/order/order.component.html
+++ b/src/app/admin/order/order.component.html
@@ -6,7 +6,7 @@
                 <mat-tab label="ตรวจสอบ">
                     <app-verify-order></app-verify-order>      
                 </mat-tab>
-                <mat-tab label="เตรียมส่ง">
+                <mat-tab label="จัดส่ง">
                     <app-prepare-order></app-prepare-order>
                 </mat-tab>
                 <mat-tab label="จัดส่งแล้ว">
