--- a/src/app/admin/payment-page/payment-page.component.html
+++ b/src/app/admin/payment-page/payment-page.component.html
@@ -1,5 +1,5 @@
 <label>ช่องทางการชำระเงินของเว็บ</label>
-{{ payment | json }}
+<!-- {{ payment | json }} -->
 <br><br>
 <div>
   <div class="mb-3">
